--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ sp/src/*/Release/
 sp/game/*.dll
 sp/game/*.pdb
 sp/game/*.exe
+sp/game/openmod/*
 sp/src/utils/*.dll
 sp/src/utils/*.pdb
 sp/src/utils/*.exe
